fixed search box always show scrollbar.

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -660,3 +660,6 @@ p {
   font-size: 20px;
   color: #8e8787;
 }
+.searchbox .searchbox-result-wrapper {
+  overflow-y: hidden;
+}
